--- a/FarmScout/FarmScout.csproj
+++ b/FarmScout/FarmScout.csproj
@@ -65,6 +65,8 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		
+		<!-- Shapefile Assets -->
 	</ItemGroup>
 
 	<ItemGroup>
